.deprecated/kubernetes/dns/dns-oldest/pi-hole/pi-hole.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: pi-hole
  namespace: dns
  labels:
    app: pi-hole
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: pi-hole
  template:
    metadata:
      labels:
        app: pi-hole
    spec:
      volumes:
        - name: pi-hole-config-volume
          persistentVolumeClaim:
            claimName: pi-hole-config-claim
        - name: pi-hole-dnsmasq-volume
          persistentVolumeClaim:
            claimName: pi-hole-dnsmasq-claim
      containers:
      - name: pi-hole
        image: pihole/pihole
        ports:
        - name: dns-udp
          protocol: UDP
          containerPort: 53
        - name: dns-tcp
          protocol: TCP
          containerPort: 53
        - name: http
          containerPort: 80
        - name: dhcp
          containerPort: 67
        - name: https
          containerPort: 443
        volumeMounts:
          - name: pi-hole-config-volume
            mountPath: /etc/pihole/
          - name: pi-hole-dnsmasq-volume
            mountPath: /etc/dnsmasq/
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pi-hole
  name: pi-hole-service
  namespace: dns
spec:
  ports:
  - name: dns-udp
    protocol: UDP
    targetPort: 53
    port: 53
  - name: dns-tcp
    protocol: TCP
    targetPort: 53
    port: 53
  - name: http
    targetPort: 80
    port: 80
  - name: dhcp
    targetPort: 67
    port: 67
  - name: https
    targetPort: 443
    port: 443
  selector:
    app: pi-hole
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-holeingress
  namespace: dns
spec:
  rules:
  - host: pi-hole-email.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pi-hole-service
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: pi-hole-loadbalancer-service
  namespace: dns
spec:
  loadBalancerIP: 192.168.6.99
  type: LoadBalancer
  ports:
    - name: dns-udp
      protocol: UDP
      targetPort: dns-udp
      port: 53
    # MIXED TYPES ARE NOT ALLOWED
    # - name: dns-tcp
    #   protocol: TCP
    #   targetPort: dns-tcp
    #   port: 53
  selector:
    app: pi-hole
